# aquaculture_platform

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Full_Implementation_Plan.docx  LICENSE  README.md  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  fix-password.sql  fix-password2.sql  fix-test-user.sql  get-equipment-types.json  get-locations.json  get-protocols.json  introspection.json  jest.preset.js  login-request.json  nx.json  package-lock.json  package.json  register-mqtt-sensor.json  register-simple-sensor.json  test-bcrypt.js  test-mortality.sh  test-request.json  tsconfig.base.json  update-password.sql
.claude/: settings.local.json
.claude/plans/: lovely-conjuring-pike.md  modular-pricing-system.md  piped-pondering-iverson.md
.github/: ARCHITECTURE.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci-affected.yml  ci-full.yml  db-migration-check.yml  dependency-review.yml  deploy.yml  infra-terraform-apply.yml  infra-terraform-plan.yml  performance-benchmark.yml  security-snyk.yml  security-trivy.yml
apps/admin-api-service/: jest.config.ts  project.json
apps/alert-engine/: jest.config.ts  project.json
apps/auth-service/: project.json  webpack.config.js
apps/billing-service/: jest.config.ts  project.json
deploy/base/: ingress.yaml  (+5 more)
docs/: sentinel-hub-layers.md
edge-agent/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
edge-agent/.github/workflows/: ci.yml  release.yml
edge-agent/src/: commands.rs  config.rs  error.rs  gpio.rs  main.rs  modbus.rs  mqtt.rs  provisioning.rs  shutdown.rs  telemetry.rs
edge-agent/src/resilience/: circuit_breaker.rs  timeout.rs
edge-agent/src/scripting/: actions.rs  conflict.rs  context.rs  engine.rs  limits.rs  mod.rs  storage.rs  triggers.rs
sensorprotocols/: Modbus-TCP.md  mqtt-protocol.md
(+2048 files in other folders)
