[package]
name = "suderra-agent"
version = "1.0.0"
edition = "2021"
authors = ["Suderra <info@suderra.com>"]
description = "Suderra Edge Agent for Industrial IoT"
license = "Proprietary"
repository = "https://github.com/suderra/edge-agent"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client for provisioning API
# Use rustls for cross-compilation support (no OpenSSL dependency)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# MQTT client
rumqttc = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System info for telemetry
sysinfo = "0.30"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for script variable interpolation
regex = "1.10"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Config file watching
notify = "6.1"

# Modbus TCP/RTU for PLC communication
tokio-modbus = "0.13"
tokio-serial = "5.4"

# GPIO support (for Raspberry Pi / Revolution Pi)
# rppal = { version = "0.17", optional = true }

# Signal handling
ctrlc = "3.4"

# Machine ID / fingerprint
machine-uid = "0.5"

# MAC address
mac_address = "1.1"

# Hostname
hostname = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific GPIO support
rppal = { version = "0.17", optional = true }

[features]
default = []
gpio = ["rppal"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[[bin]]
name = "suderra-agent"
path = "src/main.rs"
